web-infras/parser/tests/fixtures/babel/core/object/invalid-setter-two-params/output.txt
[SyntaxError]: Setter must have exactly one formal parameter. (1,13)
1|({ set prop(x, y) {} })
 |           ^
